--- a/week_1/question 01/1.md
+++ b/week_1/question 01/1.md
@@ -11,11 +11,11 @@
 # 
 
 # Code Screenshot :
-![](images/1_code.png)
+![](week_1/images/1_code.png)
 
 #
 # Code Output :
-![](images/1_output.png)
+![](week_1/images/1_output.png)
 
 
 
