--- a/week_1/1.md
+++ b/week_1/1.md
@@ -11,11 +11,11 @@
 # 
 
 # Code Screenshot :
-![](week_1/images/1_code.png)
+![](images/1_code.png)
 
 #
 # Code Output :
-![](week_1/images/1_output.png)
+![](images/1_output.png)
 
 
 
